tests/invalid/function/generic_item_expected_fn_unsolved_type_param.facet
fn keep<T, U>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  let f: unrestricted fn(affine isize) -> affine isize = keep in
  (f 1)
}
